tests/expectations/parser/program/pipe_eof.out
Error [EPAR0370005]: expected '}', '@', 'record', 'constructor', 'fn', 'mapping', 'storage' -- found '|'
    --> test:6:5
     |
   6 |     |}
     |     ^
